# python-project-lvl2

./: Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: cli.py  load_file.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py  test_load_file.py
